# bennett

./: .gitignore  Makefile.am  README.md  bugs.txt  cg-sys.cc  cg.c  conf  configure.ac  corrections.txt  disasm.c  fact.vas  fact.vsl  fib.dis  header  lib  main.c  parser.h  parser.y  scanner.l  test.dis  vam.c  vas.y  vc.h
bak/: vas.h
examples/: .gitignore  Makefile  Makefile.am  echo.vsl  hello.vsl  hello1.vas  mk  simplest.vsl
myvm/: .gitignore  Makefile  README.md  asm.p6  asm1.cc  disasm.p6  test.vas
myvm/asm1/: asm1.cc
myvm/v1/: README.md  asm.p6  ben.cc  bennett.pl6  disasm.p6  test.vas
