MK = ./mk
BUILT_SOURCES = fact.vam fact.vas fib.vam fib.vas hello.vam hello.vas simplest.vam simplest.vas test2.vam test2.vas test.vam test.vas
CLEANFILES = $(BUILT_SOURCES)

fact.vam: fact.vsl
	$(MK) $<

fib.vam: fib.vsl
	$(MK) $<

hello.vam: hello.vsl
	$(MK) $<

simplest.vam: simplest.vsl
	$(MK) $<

test2.vam: test2.vsl
	$(MK) $<

test.vam: test.vsl
	$(MK) $<
